--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 
-      <link rel="stylesheet" href="../CSS/default.css" />
+      <link rel="stylesheet" href="/CSS/default.css" />
   </head>
   
   <body>
@@ -34,36 +34,36 @@
       <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <img src="../Images/logo.png" href="../HTML/index.html" alt="Logo"/>
+            <img src="/Images/logo.png" href="index.html" alt="Logo"/>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../HTML/index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="../HTML/aboutme.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="/HTML/aboutme.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Über mich
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="../HTML/aboutme.html">Lebenslauf</a></li>
-                    <li><a class="dropdown-item" href="../HTML/aboutme.html">Projkete</a></li>
+                    <li><a class="dropdown-item" href="/HTML/aboutme.html">Lebenslauf</a></li>
+                    <li><a class="dropdown-item" href="/HTML/aboutme.html">Projkete</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../HTML/facts.html">Fakten Generator</a>
+                  <a class="nav-link" href="/HTML/facts.html">Fakten Generator</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../HTML/quiz.html">Quiz</a>
+                  <a class="nav-link" href="/HTML/quiz.html">Quiz</a>
                 </li>
               </ul>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Suche" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Suche</button>
               </form>
-              <form id="loginpage" action="../HTML/login.html">
+              <form id="loginpage" action="/HTML/login.html">
               <button class="btn btn-outline-success" type="submit">Login</button> 
             </form>
             </div>
