--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Über mich</title>
     <meta name="language" content="de">
     <meta name="author" content="Gian-Luca Rausa">
     <meta name="date" content="2024-12-18">
@@ -80,7 +80,7 @@
               <div class="control maximize"></div>
             </div>
           </div>
-          <div class="text">Die Seite wird noch gebaut...</div>
+          <div class="text">Die Seite befindet sich noch im Aufbau...</div>
         </div>
       </main>
       
