--- a/HTML/login.html
+++ b/HTML/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Login Page</title>
     <meta name="language" content="de">
     <meta name="author" content="Gian-Luca Rausa">
     <meta name="date" content="2024-12-18">
