--- a/HTML/template.html
+++ b/HTML/template.html
@@ -80,7 +80,7 @@
               <div class="control maximize"></div>
             </div>
           </div>
-          <div class="text">Die Seite wird noch gebaut...</div>
+          <div class="text">Die Seite befindet sich noch im Aufbau...</div>
         </div>
       </main>
       
