--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 </li>
               </ul>
               <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Suche" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Suche</button>
+                <input class="form-control me-2" id="suchinput" type="search" placeholder="Suche" aria-label="Search">
+                <button class="btn btn-outline-success" id="suchbutton" type="submit">Suche</button>
               </form>
               <form id="loginpage" action="HTML/login.html">
               <button class="btn btn-outline-success" type="submit">Login</button> 
