--- a/HTML/register.html
+++ b/HTML/register.html
@@ -37,7 +37,7 @@
       <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            
+            <a class="navbar-brand" href="../index.html"><img src="../Images/logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,6 +51,7 @@
                     Über mich
                   </a>
                   <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="aboutme.html">Über mich</a></li>
                     <li><a class="dropdown-item" href="#">Lebenslauf</a></li>
                     <li><a class="dropdown-item" href="#">Projkete</a></li>
                   </ul>
@@ -63,8 +64,8 @@
                 </li>
               </ul>
               <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Suche" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Suche</button>
+                <input class="form-control me-2" id="suchinput" type="search" placeholder="Suche" aria-label="Search">
+                <button class="btn btn-outline-success" id="suchbutton" type="submit">Suche</button>
               </form>
               <form id="loginpage" action="../HTML/login.html">
               <button class="btn btn-outline-success" type="submit">Login</button> 
