--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            
+            <a class="navbar-brand" href="index.html"><img src="./Images/logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,6 +48,7 @@
                     Über mich
                   </a>
                   <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="HTML/aboutme.html">Über mich</a></li>
                     <li><a class="dropdown-item" href="HTML/aboutme.html">Lebenslauf</a></li>
                     <li><a class="dropdown-item" href="HTML/aboutme.html">Projkete</a></li>
                   </ul>
