--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -72,16 +72,57 @@
         </nav>
       </header>
       <main>
-        <div class="terminal-loader">
-          <div class="terminal-header">
-            <div class="terminal-title">Status</div>
-            <div class="terminal-controls">
-              <div class="control close"></div>
-              <div class="control minimize"></div>
-              <div class="control maximize"></div>
+        <div class="info-section">
+          <h1><b>Gian-Luca Rausa</b></h1>
+          <div class="details">
+            <p>Georg-Pfotzer Straße 14, 77731 Willstätt</p>
+            <p>017663739341 / gianluca.rausa@icloud.com</p>
+          </div>
+        </div>
+        <div class="Felxbox">
+          <div class="element1">
+            <h1>Lebenslauf</h1>
+            <div class="PersönlicheDaten">
+              <div class="s1">
+              <p>Geburtsdatum/-ort<br>
+                Staatsangehörigkeit</p>
+                <p>09/2023-07/2024<br> 
+                  <br>
+                  <br>
+                  <br>
+                   08/2019-06/2022<br>
+                   <br>
+                   <br>
+                   <br>
+                   <br>
+                   09/2026-07/2019<br>
+                  <br>
+                  09/2013-07/2016</p>
+              </div>
+              <div class="s2">
+                <p>02.11.2003 in Kehl<br>
+                  deutsch</p>
+                  <p><h6>Gewerbliche-Technische Schule, Offenburg</h6></p>
+                  <ul>
+                    <li>Abschluss: Fachhochschulereife</li>
+                    <li>Belobigung für besondere Lernleistung und gutes Verhalten</li>
+                  </ul>
+                  <p><h6>Berufliche Schule, Wolfach</h6></p>
+                  <ul>
+                    <li>Ausbildung zum Zerspaungsmechaniker</li>
+                    <li>Abschluss: Geprüfter Zerspaungsmechaniker Fachrichtung Drehen</li>
+                    <li>Lehrzeitverkürzung durch Notendurchschnitt von 2m0 möglich</li>
+                  </ul>
+                  <p><h6>Tulla-Realschule, Kehl</h6></p>
+                  <p><h6>Oken Gymnasium, Offenburg</h6></p>
+              </div>
             </div>
           </div>
-          <div class="text">Die Seite befindet sich noch im Aufbau...</div>
+          <div class="element2">
+            <button type="button" class="btn btn-primary">Facebook</button>
+            <button type="button" class="btn btn-danger">Google</button>
+            <button type="button" class="btn btn-secondary">Twitter</button>
+          </div>
         </div>
       </main>
       
