--- a/HTML/quiz.html
+++ b/HTML/quiz.html
@@ -28,7 +28,7 @@
 
       <link rel="stylesheet" href="../CSS/default.css" />
 
-      <ling rel="stylesheet" href="../CSS/quiz.css" />
+      <link rel="stylesheet" href="../CSS/quiz.css" />
   </head>
   
   <body>
