--- a/HTML/register.html
+++ b/HTML/register.html
@@ -60,7 +60,7 @@
                   <a class="nav-link" href="../HTML/facts.html">Fakten Generator</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../HTML/quiz.html">Quiz</a>
+                  <a class="nav-link" href="../HTML/quiz.html">Taschenrechner</a>
                 </li>
               </ul>
               <form class="d-flex" role="search">
